[package]
name = "apalis_test"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yml = "0.0.12"
apalis = { version = "0.6", features = ["retry", "limit", "tracing"] }
apalis-cron = "0.6"
apalis-sql = { version = "0.6", features = ["sqlite", "tokio-comp"] }
tokio = { version = "1", features = ["full", "tracing"] }
